<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JoinGameFragment">

    <ImageButton
        android:id="@+id/prev_page_join"
        style="@style/PrevPageButton"
        android:contentDescription="@string/settings_content_description_text" />

    <!--CAMBIAR-->
    <TextView
        android:id="@+id/textview_join"
        style="@style/CustomTextView"
        android:layout_marginTop="@dimen/top_margin_textview_join"
        android:text="@string/room_code_text" />

    <!--CAMBIAR-->

    <EditText
        android:id="@+id/edittext_join"
        style="@style/CustomEditText"
        android:layout_marginTop="@dimen/top_margin_edittext_join"
        android:hint="@string/room_code_hint_text" />

    <!--

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/code_to_join"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/top_background_color"
        android:hint="Code to join"
        android:textColorHint="@color/top_background_color"
        app:helperTextTextColor="@color/top_background_color"
        app:hintTextColor="@color/top_background_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_code_to_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="#0352C8" />

    </com.google.android.material.textfield.TextInputLayout> -->


</FrameLayout>