<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuFragment">

    <ImageView
        android:id="@+id/backgroundImageViewMenu"
        style="@style/BackgroundImageView"
        android:importantForAccessibility="no"
        android:src="@drawable/main_menu"/>

    <ImageView
        android:id="@+id/logoImageView"
        style="@style/LogoImageView"
        android:importantForAccessibility="no" />

    <!--
    <ImageButton
        android:id="@+id/settingsImageButton"
        style="@style/SettingsImageButton"
        android:contentDescription="@string/settings_content_description_text" />
    -->
    <Button
        android:id="@+id/play_button"
        style="@style/OptionMenuButton"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="@dimen/lateral_margin_menu_button"
        android:layout_marginLeft="@dimen/lateral_margin_menu_button"
        android:layout_marginBottom="@dimen/bottom_margin_top_button"
        android:background="@drawable/custom_play_button"
        android:text="@string/play_menu_text"
        android:textColor="@color/play_color" />

    <Button
        android:id="@+id/rules_button"
        style="@style/OptionMenuButton"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/lateral_margin_menu_button"
        android:layout_marginRight="@dimen/lateral_margin_menu_button"
        android:layout_marginBottom="@dimen/bottom_margin_top_button"
        android:background="@drawable/custom_rules_button"
        android:text="@string/rules_menu_text"
        android:textColor="@color/rules_color" />

    <Button
        android:id="@+id/profile_button"
        style="@style/OptionMenuButton"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="@dimen/lateral_margin_menu_button"
        android:layout_marginLeft="@dimen/lateral_margin_menu_button"
        android:layout_marginBottom="@dimen/bottom_margin_menu_button_cellphone"
        android:background="@drawable/custom_profile_button"
        android:text="@string/profile_menu_text"
        android:textColor="@color/profile_color" />

    <Button
        android:id="@+id/settings_button"
        style="@style/OptionMenuButton"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/lateral_margin_menu_button"
        android:layout_marginRight="@dimen/lateral_margin_menu_button"
        android:layout_marginBottom="@dimen/bottom_margin_menu_button_cellphone"
        android:background="@drawable/custom_settings_button"
        android:text="@string/settings_menu_text"
        android:textColor="@color/settings_color" />
</FrameLayout>